# DazToBlender

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE  README.md  jsdoc.json  package-lock.json  package.json
Blender/appdata_common/Blender Foundation/Blender/BLENDER_VERSION/scripts/addons/DTB/: Animations.py  BumpToNormal.py  CustomBones.py  DataBase.py  DazRigBlend.py  DtbCommands.py  DtbDazMorph.py  DtbIKBones.py  DtbImports.py  DtbMaterial.py  DtbMaterial.py.bak  DtbMaterial_OLD.py  DtbOperators.py  DtbPanels.py  DtbProperties.py  DtbShapeKeys.py  Environment.py  FitBone.py  Global.py  MatDct.py  NodeArrange.py  Octane.py  Poses.py  Sharp.py  ToHighReso.py  ToRigify.py  Util.py  Versions.py  WCmd.py  __init__.py
Blender/appdata_common/Blender Foundation/Blender/BLENDER_VERSION/scripts/addons/DTB/dependencies/: link_library.blend
Blender/appdata_common/Blender Foundation/Blender/BLENDER_VERSION/scripts/addons/DTB/img/: dtb.sqlite
Blender/appdata_common/Blender Foundation/Blender/DAZ 3D Add-ons/DTB_v280-283/: CustomBones.py  DataBase.py  DazRigBlend.py  DtbDazMorph.py  DtbShaders.py  FitBone.py  Global.py  MatDct.py  NodeArrange.py  Versions.py  __init__.py
Blender/appdata_common/Blender Foundation/Blender/DAZ 3D Add-ons/DTB_v280-283/img/: Error.fbx
Daz Studio/appdir_common/scripts/support/DAZ/: Daz to Blender v2.dsa  Daz to Blender.dsa  Daz to Blender_Genital.dsa  Daz to Blender_MorphExporter.dsa  DzBlenderMorphSelectionDialog.dsa  DzBlenderSilentExporter.dsa  DzLoadScene.dsa  dzBlenderSample.bat
Daz Studio/appdir_common/scripts/support/DAZ/dzBridgeUtils/: DzBlenderAutoWeight.dsa  DzBlenderBridgeExporter.dsa  DzBlenderDialog.dsa  DzBlenderEnvironment.dsa  DzBlenderFigure.dsa  DzBlenderHelpers.dsa  DzBlenderMorphSelectionDialog.dsa  DzBlenderMorphs.dsa  DzBlenderPose.dsa  DzBlenderScene.dsa  DzBlenderSubdivision.dsa  DzBlenderSubdivisionDialog.dsa  DzBlenderWriter.dsa
DazStudioPlugin/: CMakeLists.txt  DzBlenderAction.cpp  DzBlenderAction.h  DzBlenderBridge.aps  DzBlenderBridge.rc  DzBlenderDialog.cpp  DzBlenderDialog.h  pluginmain.cpp  real_version.h  resource.h  version.h
DazStudioPlugin/Resources/: NodeArrange.py  blender_tools.py  create_blend.py  create_zip.PS1  resources.qrc
DazStudioPlugin/Resources/Scripts/: bake_all_instances_nogui.dsa  bake_all_pivots_nogui.dsa  bake_pivots_and_instances_nogui.dsa  bake_rfn_nogui.dsa  blender_tools.py  bone_converter_aArgs.dsa  create_blend.py  g8_to_metahuman.json  g8_to_mixamo.json  g8_to_unity.json  g8_to_unreal.json  g9_to_metahuman.json  g9_to_mixamo.json  g9_to_unity.json  g9_to_unreal_manny.json  game_readiness_tools.py  genesis9_head_rig.json
Test/: QA Manual Test Cases.md  QA-Test-Scene-01.duf
Test/Results/: Readme.MD  TestResults_DzBlenderAction.json  TestResults_DzBlenderAction.txt  TestResults_DzBlenderDialog.json  TestResults_DzBlenderDialog.txt
Test/TestCases/: QA_Utility_Functions.dsa
Test/UnitTests/: CMakeLists.txt  RunUnitTests.dsa  UnitTest_DzBlenderAction.cpp  UnitTest_DzBlenderAction.h  UnitTest_DzBlenderDialog.cpp  UnitTest_DzBlenderDialog.h
docs/: README.md  _sidebar.md  changeLog.md  index.html
docs/advanced/: advanced.md  subdivisions.md  subdivsions.md
docs/beginner/: beginner.md  exploringTheUi.md  manualInstall.md  morphExport.md
docs/developers/: directory.md  introduction.md
docs/developers/api/: dazstudio.md
